feat: preparación completa para producción
- Docker: Dockerfile backend optimizado (multi-stage build)
- Docker: Dockerfile.production frontend con Nginx y SSR
- Docker: docker-compose.yml con MongoDB, backend y frontend
- Configuración: Variables de entorno (.env backend/frontend)
- Seguridad: bcrypt password hashing y autenticación mejorada
- Arquitectura: Graceful shutdown, worker pattern, WebSocket timeouts
- Features: Heartbeat monitoring de placa con timeouts configurables
- Features: Relay mapping dinámico (no hardcoded)
- Features: Animaciones de estado (conectada/desconectada)
- Documentación: DEPLOYMENT.md, PRODUCTION-READY.md, INICIO-RAPIDO.md
- Scripts: start-backend/frontend.bat y .ps1 para inicio fácil
- Optimización: Logs mejorados, hot-reload de configuración
- Limpieza: .gitignore actualizado, archivos sensibles protegidos

--- a/FrontEnd/.env.example
+++ b/FrontEnd/.env.example
@@ -1,9 +1,8 @@
-# This is the api prefix used in the useFetch composable function.
-# The default value point to the json-server, which is started in the same time as 
-# the dev server is started (see package.json "dev" script)
+# Backend API URL
+# Development: Use localhost or your local backend IP
+# Production: Use your production domain
+# This is used by the useFetch composable and API calls
 # @see /src/composable/useFetch.ts
-# @see /json-server/db.json
-# @see /json-server/config.json
-VITE_API_BASE_URL=172.20.57.69
+VITE_API_BASE_URL=http://localhost:8099
 
  
