--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,13 @@ Thumbs.db
 .env
 .env.local
 .env.*.local
+.env.docker
 
 # Archivos temporales
 *.tmp
 *.bak
 *.cache
+
+# Archivos grandes
+*.zip
+FrontEnd/Generador.zip
