feat: agregar historial de activaciones con exportación PDF y documentación
✨ Nuevas funcionalidades:
- Módulo de historial de activaciones (ActivityLogsView.vue)
- Filtro por rango de fechas
- Exportación a PDF con jspdf y jspdf-autotable
- Estadísticas de activaciones

🔧 Backend:
- Endpoints para logs (/api/activity/logs, /api/activity/stats)
- Registro automático de operaciones de relés
- Fix WebSocket concurrent write panic (channel-based)

📚 Documentación:
- README.md completamente actualizado
- Guías de exportación Docker
- Scripts de instalación/desinstalación

🐳 Docker:
- Scripts de exportación de imágenes
- docker-compose para cliente
- Archivos .tar excluidos del repo (generar localmente)

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,8 +1,8 @@
 # ===== MongoDB Credentials =====
 MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=your_secure_password_here
+MONGO_ROOT_PASSWORD=changeme
 
 # ===== Instrucciones =====
-# 1. Copia este archivo a .env.docker
-# 2. Cambia los valores por credenciales reales
-# 3. NO subas .env.docker a Git
+# 1. Cambia MONGO_ROOT_PASSWORD por una contraseña segura
+# 2. NO subas .env.docker a Git
+# 3. Después de cambiar la contraseña, reinicia con: docker-compose restart
