--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -106,6 +106,8 @@
     "focus-trap": "7.5.2",
     "focus-trap-vue": "4.0.2",
     "imask": "7.1.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "leaflet": "^1.9.4",
     "mapbox-gl": "2.15.0",
     "mqtt": "^5.5.0",
