--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     build:
       context: ./BackEnd
       dockerfile: Dockerfile
+    image: generador-backend:latest
     container_name: generador-backend
     restart: unless-stopped
     depends_on:
@@ -68,6 +69,7 @@ services:
       target: production
       args:
         VITE_API_BASE_URL: http://localhost:8099
+    image: generador-frontend:latest
     container_name: generador-frontend
     restart: unless-stopped
     depends_on:
