--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       MONGODB_DB: generator
       MONGODB_COLL: config
       PORT: 8099
-      FRONTEND_ORIGIN: http://frontend:3000
+      FRONTEND_ORIGIN: http://localhost
       ENVIRONMENT: production
     ports:
       - '8099:8099'
