--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,27 @@ services:
       retries: 5
       start_period: 10s
 
+  # ===== MQTT Broker (Mosquitto) =====
+  mqtt-broker:
+    image: eclipse-mosquitto:2.0
+    container_name: generador-mqtt
+    restart: unless-stopped
+    ports:
+      - '1883:1883'  # Puerto MQTT
+      - '9001:9001'  # Puerto WebSocket
+    volumes:
+      - mqtt_data:/mosquitto/data
+      - mqtt_logs:/mosquitto/log
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
+    networks:
+      - generador-network
+    healthcheck:
+      test: ['CMD', 'mosquitto_sub', '-t', '$$SYS/#', '-C', '1', '-i', 'healthcheck', '-W', '3']
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
+
   # ===== Backend (Go) =====
   backend:
     build:
@@ -30,6 +51,8 @@ services:
     restart: unless-stopped
     depends_on:
       mongodb:
+        condition: service_healthy
+      mqtt-broker:
         condition: service_healthy
     environment:
       MONGODB_URI: mongodb://mongodb:27017
@@ -109,4 +132,8 @@ volumes:
   mongodb_data:
     driver: local
   mongodb_config:
+    driver: local
+  mqtt_data:
+    driver: local
+  mqtt_logs:
     driver: local
