security: mejorar configuración de producción - variables para credenciales MongoDB y FRONTEND_ORIGIN

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,8 +1,16 @@
 # ===== MongoDB Credentials =====
+# ⚠️ IMPORTANTE: Cambia estos valores ANTES de ir a producción
 MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=changeme
+MONGO_ROOT_PASSWORD=ChangeThisToAStrongPasswordIn_Production_12345!
+
+# ===== Frontend Configuration =====
+# URL del frontend accesible desde el navegador
+FRONTEND_ORIGIN=http://localhost
 
 # ===== Instrucciones =====
-# 1. Cambia MONGO_ROOT_PASSWORD por una contraseña segura
-# 2. NO subas .env.docker a Git
-# 3. Después de cambiar la contraseña, reinicia con: docker-compose restart
+# 1. OBLIGATORIO: Cambia MONGO_ROOT_PASSWORD por una contraseña segura única
+#    Usa: openssl rand -base64 32
+# 2. OBLIGATORIO: Actualiza FRONTEND_ORIGIN con tu dominio en producción
+#    Ejemplo: https://tu-dominio.com o https://192.168.1.100
+# 3. NUNCA subas .env.docker a Git (ya está en .gitignore)
+# 4. Después de cambiar valores, reinicia: docker-compose restart
