--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,11 +55,11 @@ services:
       mqtt-broker:
         condition: service_healthy
     environment:
-      MONGODB_URI: mongodb://mongodb:27017
+      MONGODB_URI: mongodb://${MONGO_ROOT_USER:-admin}:${MONGO_ROOT_PASSWORD:-changeme}@mongodb:27017
       MONGODB_DB: generator
       MONGODB_COLL: config
       PORT: 8099
-      FRONTEND_ORIGIN: http://localhost
+      FRONTEND_ORIGIN: ${FRONTEND_ORIGIN:-http://localhost}
       ENVIRONMENT: production
     ports:
       - '8099:8099'
