fix: hacer VITE_API_BASE_URL variable en docker-compose para soportar múltiples direcciones IP

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -4,13 +4,23 @@ MONGO_ROOT_USER=admin
 MONGO_ROOT_PASSWORD=ChangeThisToAStrongPasswordIn_Production_12345!
 
 # ===== Frontend Configuration =====
-# URL del frontend accesible desde el navegador
+# URL del frontend accesible desde el navegador (usado por CORS en backend)
 FRONTEND_ORIGIN=http://localhost
+
+# ===== API Configuration =====
+# URL de la API que el frontend usará en el navegador
+# Debe ser la IP o dominio desde donde accedes (frontend en navegador)
+VITE_API_BASE_URL=http://localhost:8099
 
 # ===== Instrucciones =====
 # 1. OBLIGATORIO: Cambia MONGO_ROOT_PASSWORD por una contraseña segura única
 #    Usa: openssl rand -base64 32
-# 2. OBLIGATORIO: Actualiza FRONTEND_ORIGIN con tu dominio en producción
-#    Ejemplo: https://tu-dominio.com o https://192.168.1.100
+# 2. OBLIGATORIO: Actualiza FRONTEND_ORIGIN y VITE_API_BASE_URL
+#    Ejemplo para red local (acceso desde 10.1.2.16):
+#      FRONTEND_ORIGIN=http://10.1.2.16
+#      VITE_API_BASE_URL=http://10.1.2.16:8099
+#    Ejemplo para dominio (HTTPS):
+#      FRONTEND_ORIGIN=https://tu-dominio.com
+#      VITE_API_BASE_URL=https://tu-dominio.com/api
 # 3. NUNCA subas .env.docker a Git (ya está en .gitignore)
 # 4. Después de cambiar valores, reinicia: docker-compose restart
