--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       dockerfile: Dockerfile.production
       target: production
       args:
-        VITE_API_BASE_URL: http://localhost:8099
+        VITE_API_BASE_URL: ${VITE_API_BASE_URL:-http://localhost:8099}
     image: generador-frontend:latest
     container_name: generador-frontend
     restart: unless-stopped
