--- a/.env.docker.example
+++ b/.env.docker.example
@@ -1,8 +1,3 @@
-# ===== MongoDB Credentials =====
-# ⚠️ IMPORTANTE: Cambia estos valores ANTES de ir a producción
-MONGO_ROOT_USER=admin
-MONGO_ROOT_PASSWORD=ChangeThisToAStrongPasswordIn_Production_12345!
-
 # ===== Frontend Configuration =====
 # URL del frontend accesible desde el navegador (usado por CORS en backend)
 FRONTEND_ORIGIN=http://localhost
@@ -13,14 +8,12 @@ FRONTEND_ORIGIN=http://localhost
 VITE_API_BASE_URL=http://localhost:8099
 
 # ===== Instrucciones =====
-# 1. OBLIGATORIO: Cambia MONGO_ROOT_PASSWORD por una contraseña segura única
-#    Usa: openssl rand -base64 32
-# 2. OBLIGATORIO: Actualiza FRONTEND_ORIGIN y VITE_API_BASE_URL
+# 1. OBLIGATORIO: Actualiza FRONTEND_ORIGIN y VITE_API_BASE_URL
 #    Ejemplo para red local (acceso desde 10.1.2.16):
 #      FRONTEND_ORIGIN=http://10.1.2.16
 #      VITE_API_BASE_URL=http://10.1.2.16:8099
 #    Ejemplo para dominio (HTTPS):
 #      FRONTEND_ORIGIN=https://tu-dominio.com
 #      VITE_API_BASE_URL=https://tu-dominio.com/api
-# 3. NUNCA subas .env.docker a Git (ya está en .gitignore)
-# 4. Después de cambiar valores, reinicia: docker-compose restart
+# 2. NUNCA subas .env a Git (ya está en .gitignore)
+# 3. Después de cambiar valores, reinicia: docker-compose restart
